# modeling

./: LICENSE  README.md  pyproject.toml
notebooks/: modelling.ipynb
notebooks/data/: movies.parquet
