[tool.poetry]
name = "modeling"
version = "0.1.0"
description = "Modeling of scraper data"
authors = ["Rokas Klioštoraitis <r.kliostoraitis@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
scraper = {git = "https://github.com/RoKlio/movie_scraper.git", rev = "main"}
pandas = "^1.5.2"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
black = "^22.12.0"
pycln = "^2.1.2"
Flake8-pyproject = "^1.2.2"
cloudpickle = "^2.2.0"
ipykernel = "^6.20.2"
pyarrow = "^10.0.1"

[tool.pycln]
all = true

[tool.flake8]
exclude = ['.git', '__pycache__', '.venv']
max_line_length = 99
max_doc_length = 79
max-complexity = 18

[tool.black]
line-length = 99
include = '/project$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 99

[tool.mypy]
files = "src/**/*.py"
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
strict_equality = true

module = [
    "PIL.*",
    "plotly.*",
    "pandas.*",
    "numpy.*",
    "pyspark.*",
    "sklearn.*",
    "scipy.*",
    "cloudpickle.*",
    "vintools.*",
    "seaborn.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
